--- a/Gobot/Gobot/Content/Menu.scss
+++ b/Gobot/Gobot/Content/Menu.scss
@@ -1,8 +1,10 @@
-﻿/* -------------------------------------------------------------------------------------------------------------------
+﻿@import 'global';
+
+/* -------------------------------------------------------------------------------------------------------------------
                                                         MENU
  ------------------------------------------------------------------------------------------------------------------- */
 
-#nav {
+#navBig {
     $navWidth: 90px;
 
     position: fixed;
@@ -10,7 +12,7 @@
     right: 0;
     width: $navWidth;
     height: 100%;
-    background-color: #f16651;
+    background-color: $menuColor;
     z-index: 900;
     font: 300 12px Lato, sans-serif;
 
@@ -22,7 +24,7 @@
         width: 100%;
         height: 65px;
         overflow: hidden;
-        background-color: #f16651;
+        background-color: $menuColor;
     }
 
     > #account { 
@@ -114,10 +116,10 @@
 
     .active {
         left: -10px;
-        background-color: #e3604c;
-        border-right: 10px solid #a84739;
-        border-top: 1px solid #cc5644;
-        border-bottom: 1px solid #cc5644;
+        background-color: $menuColor_active;
+        border-right: 10px solid $menuColor_active_borderRight;
+        border-top: 1px solid $menuColor_active_borderTop;
+        border-bottom: 1px solid $menuColor_active_borderTop;
         transition: left 0.1s linear;
     }
 }
@@ -125,7 +127,7 @@
 .ink {
 	display: block; 
     position: absolute;
-	background: #a74232;
+	background: $menuColor_Ink;
 	border-radius: 100%;
 	transform: scale(0);
 }
@@ -134,173 +136,34 @@
     @-moz-keyframes ripple      { 100% { opacity: 0; transform: scale(2.5); } }
     @-webkit-keyframes ripple   { 100% { opacity: 0; transform: scale(2.5); } }
 
+#navSmall {
+    $height: 82px;
 
-@media screen and (min-width: 960px) {
-    #nav {
-        $navWidth: 90px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: $height;
+    margin: 0;
+    padding: 0;
+    background-color: $menuColor;
 
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: $navWidth;
-        height: 100%;
-        background-color: #f16651;
-        z-index: 900;
-        font: 300 12px Lato, sans-serif;
+    > .row {
+        position: relative;
+        float: left;
+        clear: both;
+        height: $height;
+        max-width: 500px;
 
-        > a {
-            position: relative;
-            float: left;
-            clear: both;
-            left: 0;
-            width: 100%;
-            height: 65px;
-            overflow: hidden;
-            background-color: #f16651;
-        }
-
-        > #account { 
-            $height: 98px;
-            height: $height; 
-
-            > #img { background-size: 56px 56px; }
-            > #border {
-                $borderHeight: 56px;
-                $borderWidth: 4px;
-
-                position: absolute;
-                top: $height / 2 - $borderHeight / 2 - $borderWidth;
-                left: ($navWidth - $borderHeight) / 2 - $borderWidth;
-                width: 56px;
-                height: $borderHeight;
-                border-radius: 50%;
-                border: $borderWidth solid black;
-                opacity: 0.30;
-            }
-        }
-
-        > a > div {
-            position: relative;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-
-        > #textLinks {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            height: auto;
-            margin-bottom: 25px;
-
-            > a {
-                position: relative;
-                float: left;
-                clear: both;
-                width: 100%;
-                text-align: center;
-                padding: 6px 0;
-                font-size: 16px;
-                color: white;
-            }
-                > a:hover {
-                    text-decoration: underline;
-                }
-        }
-
-        > #text {
-            $height: 29px;
-
-            position: absolute;
-            width: auto;
-            height: $height;
-            background-color: #232323;
-            z-index: 901;
-            overflow: visible;
-            padding: 0 10px;
-
-            > span {
-                display: block;
-                position: relative;
-                width: 100%;
-                font: 300 16px Lato, sans-serif;
-                color: #afafaf;
-                line-height: $height;
-                text-align: center;
-            }
-
-            > div {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 100%;
-                width: 9px;
-                height: 100%;
-                background-image: url(../Images/triangle.png);
-                background-position: center;
-
-            }
-        }
-
-        .active {
-            left: -10px;
-            background-color: #e3604c;
-            border-right: 10px solid #a84739;
-            border-top: 1px solid #cc5644;
-            border-bottom: 1px solid #cc5644;
-            transition: left 0.1s linear;
-        }
+    }
+    > .row > .box {
+        position: relative;
+        float: left;
+        width: 25%;
+        height: $height;
     }
 
-    .ink {
-	    display: block; 
-        position: absolute;
-	    background: #a74232;
-	    border-radius: 100%;
-	    transform: scale(0);
-    }
-        .ink.animate { animation: ripple 0.65s linear; }
-        @keyframes ripple           { 100% { opacity: 0; transform: scale(2.5); } }
-        @-moz-keyframes ripple      { 100% { opacity: 0; transform: scale(2.5); } }
-        @-webkit-keyframes ripple   { 100% { opacity: 0; transform: scale(2.5); } }
-}
-
-@media screen and (max-width: 959px) {
-    #nav {
-        position: fixed;
-        bottom: 0 !important;
-        left: 0;
-        right: auto;
-        height: 70px;
-        width: 100%;
-
-        > #textLinks {
-            float: left;
-            position: relative;
-            bottom: auto;
-
-            > a {
-                height: 65px;
-                line-height: 65px;
-                padding: 0;
-                font-size: 20px;
-            }
-                > a:hover { text-decoration: none; }
-        }
-
-        .active {
-            border-right-width: 80px;
-            left: -80px;
-        }
-
-        .textLink > div {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-    }
+    #first { display: block; }
+    #second { display: none; }
+    #third { display: none; }
 }
