--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <meta name="description" content="The description of my page" />
 </head>
 <body>
-    <div id="nav">
+    <div id="navBig">
         <a id="account" class="active" href="@Url.Action("Index", "Account")">
             <div id="img" style="background-image: url(@Url.Content("~/Images/anonymous.png"))"></div>
             <div id="border"></div>
@@ -42,6 +42,23 @@
             <a class="textLink" href="@Url.Action("Contact", "Support")">Contact</a>
         </div>
     </div>
+    @*<div id="navSmall">
+        <div class="row" id="second">
+            <div id="close"><img src="~/Images/close.png"/><span>Close Menu</span></div>
+        </div>
+        <div class="row" id="first">
+            <div class="box" id="bet"><img src="~/Images/bet.png"/><span>Bet</span></div>
+            <div class="box" id="matches"><img src="~/Images/matches.png" /><span>Matches</span></div>
+            <div class="box" id="shop"><img src="~/Images/shop.png" /><span>Shop</span></div>
+            <div class="box" id="menu"><img src="~/Images/inventory.png" /><span>Inventory</span></div>
+        </div>
+        <div class="row" id="third">
+            <div class="box" id="account"><img src="~/Images/account.png" /><span>Account</span></div>
+            <div class="box" id="team"><img src="~/Images/team.png" /><span>Teams</span></div>
+            <div class="box" id="faq"><img src="~/Images/faq.png" /><span>FAQ</span></div>
+            <div class="box" id="contact"><img src="~/Images/contact.png" /><span>Contact</span></div>
+        </div>
+    </div>*@
     <div class="container body-content">
         @RenderBody()
     </div>
@@ -53,6 +70,8 @@
 </html>
 
 <script>
+    // ERROR!!!!!! ACCOUNT ON HOVER TEXT CHANGES POSITION DEPENDING ON POSITION OF HOVER
+
     var waterDropInterval;
     var mobileWidth = 959;
 
@@ -79,44 +98,45 @@
         cursor.y = event.pageY;
     });
 
-    $(document).on("mouseenter", "#nav > a > div, .textLink > div", function (e) {
+    $(document).on("mouseenter", "#navBig > a > div", function (e) {
+        // If tab is not active page
         if (!$(this).parent().hasClass("active")) {
             var parent = $(this).parent();
 
-            waterDrop(parent, e);
+            waterDrop(parent, e); // Add waterdrop effect
             waterDropInterval = setInterval(function () {
                 waterDrop(parent, e);
-            }, 1000);
+            }, 1000); // Set interval for waterdrop effect
 
-            showNavText($(this));
+            showNavText($(this)); // Show descriptive text
             var color = $(this).parent().css("background-color");
             var colors = (color.substring(color.indexOf("(") + 1, color.indexOf(")"))).replace(" ", "").split(",");
             for (var i = 0; i < colors.length; i++)
-                colors[i] = Math.round(colors[i] * 0.85);
+                colors[i] = Math.round(colors[i] * 0.85); // Get background-color (bg *0.85)
 
-            color = "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
+            color = "rgb(" + colors.join() + ")";
 
-            $(this).parent().css({ backgroundColor: color });
-            //$(this).parent().css({ backgroundColor: "rgba(0,0,0,0.15)" });
+            $(this).parent().css({ backgroundColor: color }); // Change background-color
         }
     });
-    $(document).on("mouseleave", "#nav > a > div, .textLink > div", function (e) {
+    $(document).on("mouseleave", "#navBig > a > div", function (e) {
         if (!$(this).parent().hasClass("active")) {
-            clearInterval(waterDropInterval);
-            hideNavText($(this));
+            clearInterval(waterDropInterval); // Remove waterdrop
+            hideNavText($(this)); // Remove text
 
             $(this).parent().css({ backgroundColor: "#f16651" });
         }
     });
 
-    $("#nav > a > div").click(function () {
-        clearInterval(waterDropInterval);
-        $("#nav").stop();
-        $("#nav").find(".active").removeClass("active");
+    // Active page
+    $("#navBig > a > div").click(function () {
+        clearInterval(waterDropInterval); // Remove waterdrop
+        $("#navBig").stop(); // Stop animations of nav
+        $("#navBig").find(".active").removeClass("active");
         $(this).parent().parent().find("a").css({ backgroundColor: "#f16651" });
         $(this).parent().css({ backgroundColor: "#e3604c" });
         $(this).parent().addClass("active");
-        hideNavText($(this));
+        hideNavText($(this)); // Hide text
     });
 
     function showNavText(elem) {
@@ -134,7 +154,7 @@
     }
     function hideNavText(elem) {
         if ($(window).width() > mobileWidth)
-            $("#nav > #text").remove();
+            $("#navBig > #text").remove();
     }
 
     function toMobile() {
