Started styling of /Home/Index

--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -16,8 +16,10 @@
     <div id="header">
         <div id="sub">
             <h1>VOUS ÊTES DÉCONNECTÉS.</h1>
-            <h2>Connectez-vous pour profiter de tout les fonctionnalités de Gobot. Si vous n'avez pas de compte, <a href="#">créez-le</a>, c'est gratuit et ça prend moins d'une minute!</h2>
-            <input value="S'INSCRIRE" />
+            <h2>
+                Connectez-vous pour profiter de tout les fonctionnalités de Gobot. Si vous n'avez pas de compte, <a href="#">créez-le</a>, ça prend moins d'une minute et c'est gratuit!
+            </h2>
+            <a href="#">S'INSCRIRE</a>
             <div class="separator">
                 <div class="line"></div>
                 <div class="diamond"></div>
