--- a/Gobot/Gobot/Content/Index.css
+++ b/Gobot/Gobot/Content/Index.css
@@ -6,6 +6,8 @@ html, body {
   width: 100%;
   top: 0;
   left: 0;
+  margin: 0;
+  padding: 0;
   height: auto;
   background-color: #323232;
   overflow-x: hidden; }
@@ -58,4 +60,34 @@ img {
 
 .red {
   color: #963434; }
+
+#header {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  height: 280px;
+  width: 100%; }
+  #header > div {
+    position: relative;
+    width: 50%;
+    height: 100%; }
+  #header > #sub {
+    background-color: #f16651;
+    float: left; }
+    #header > #sub > h1 {
+      font: italic 900 50px Lato, Arial, sans-serif;
+      color: white; }
+    #header > #sub > h2 {
+      font: 300 16px Lato, Arial, sans-serif;
+      color: white; }
+      #header > #sub > h2 > a {
+        text-decoration: underline;
+        color: white; }
+      #header > #sub > h2 > a:hover {
+        color: #eeeeee; }
+  #header > #login {
+    background-color: #eeeeee;
+    float: right; }
 
