--- a/Gobot/Gobot/Content/Index.scss
+++ b/Gobot/Gobot/Content/Index.scss
@@ -1,1 +1,41 @@
 ﻿@import 'global';
+
+#header {
+    position: relative;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    height: 280px;
+    width: 100%;
+
+    > div {
+        position: relative;
+        width: 50%;
+        height: 100%;
+    }
+    > #sub {
+        background-color: $menuColor;
+        float: left;
+
+        > h1 {
+            font: italic 900 50px $font;
+            color: white;
+        }
+        > h2 {
+            font: 300 16px $font;
+            color: white;
+
+            > a {
+                text-decoration: underline;
+                color: white;
+            }
+            > a:hover { color: $off-white; }
+        }
+    }
+    > #login {
+        
+        background-color: $off-white; 
+        float: right;
+    }
+}
