--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -6,6 +6,8 @@ html, body {
   width: 100%;
   top: 0;
   left: 0;
+  margin: 0;
+  padding: 0;
   height: auto;
   background-color: #323232;
   overflow-x: hidden; }
