--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -13,6 +13,9 @@ $menuColor_Ink: #a74232;
 $grey: #626262;
 $green: #51c24b;
 $red: #963434;
+$off-white: #eeeeee;
+
+$font: Lato, Arial, sans-serif;
 
 // GENERAL
 
@@ -21,6 +24,8 @@ html, body {
     width: 100%;
 	top: 0;
 	left: 0;
+    margin: 0;
+    padding: 0;
 	height: auto;
 	background-color: #323232;
     overflow-x: hidden;
