--- a/Gobot/Gobot/Content/Home.scss
+++ b/Gobot/Gobot/Content/Home.scss
@@ -14,110 +14,112 @@
         width: 50%;
         height: 100%;
     }
-    > #sub {
-        background-color: $menuColor;
-        float: left;
-        $marginLeft: 65px;
+}
 
-        > h1 {
-            margin-bottom: 0;
-            margin-left: $marginLeft;
-            font: italic 900 50px $font;
-            color: white;
-            text-transform: uppercase;
-        }
-        > h2 {
-            margin-left: $marginLeft;
+#sub {
+    background: $menuColor url("/Images/sub_bg.png") no-repeat left center;
+    float: left;
+    $marginLeft: 65px;
+
+    > h1 {
+        margin-bottom: 0;
+        margin-left: $marginLeft;
+        font: italic 900 50px $font;
+        color: white;
+        text-transform: uppercase;
+    }
+    > h2 {
+        margin-left: $marginLeft;
             
-            max-width: 60%;
-            font: 300 16px $font;
-            color: white;
-
-            > a {
-                text-decoration: underline;
-                color: white;
-            }
-            > a:hover { color: $off-white; }
-        }
-
-        $aColor: #9a483b;
-        $aBGColor: #f67763;
-        $aBorderColor: #cf513f;
+        max-width: 60%;
+        font: 300 16px $font;
+        color: white;
 
         > a {
-            display: block;
-            position: relative;
-            width: 290px;
-            height: auto;
-            background-color: $aBGColor;
-            color: $aColor;
-            border: 1px solid $aBorderColor;
-            margin: 28px auto;
-            font: italic 900 30px $font;
-            padding: 16px 0;
-            text-align: center;
-            text-transform: uppercase;
+            text-decoration: underline;
+            color: white;
         }
-        > a:hover {
-            border-color: $aColor;
-            @include box-shadow(1px 1px 14px -4px);
-        }
+        > a:hover { color: $off-white; }
     }
-    > #login {
-        
-        background-color: $off-white; 
-        float: right;
 
-        > form {
+    $aColor: #9a483b;
+    $aBGColor: #f67763;
+    $aBorderColor: #cf513f;
+
+    > a {
+        display: block;
+        position: relative;
+        width: 290px;
+        height: auto;
+        background-color: $aBGColor;
+        color: $aColor;
+        border: 1px solid $aBorderColor;
+        margin: 28px auto;
+        font: italic 900 30px $font;
+        padding: 16px 0;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    > a:hover {
+        border-color: $aColor;
+        @include box-shadow(1px 1px 14px -4px);
+    }
+
+    > a:active {
+        @include box-shadow(inset 0px 0px 8px 1px rgba(0,0,0,0.67));
+    }
+}
+
+#login {
+    background: $off-white url("/Images/login_bg.png") no-repeat right center;
+    float: right;
+
+    > form {
+        height: 100%;
+        width: 100%;
+
+        > div {
+            width: 50%;
             height: 100%;
-            width: 100%;
+        }
+
+        > .left {
+            float: left;
 
             > div {
-                width: 50%;
-                height: 100%;
-            }
+                position: relative;
+                margin: 0 106px 0 16%;
 
-            > .left {
-                float: left;
-
-                > div {
-                    position: relative;
-                    margin: 0 106px 0 16%;
-
-                    $fontSize: 24px;
-                    > label {
-                        display: block;
-                        float: left;
-                        clear: both;
-                        font: italic 900 $fontSize $font;
-                        margin: 24px 0 5px 0;
-                        text-transform: uppercase;
-                        color: $darkGrey;
-                    }
-                    > .type {
-                        float: left;
-                        clear: both;
-                        font: 400 $fontSize $font;
-                        width: 325px;
-                        height: 60px;
-                        border: 1px solid #b9b9b9;
-                        text-indent: 15px;
-                    }
+                $fontSize: 24px;
+                > label {
+                    display: block;
+                    float: left;
+                    clear: both;
+                    font: italic 900 $fontSize $font;
+                    margin: 24px 0 5px 0;
+                    text-transform: uppercase;
+                    color: $darkGrey;
+                }
+                > .type {
+                    float: left;
+                    clear: both;
+                    font: 400 $fontSize $font;
+                    width: 325px;
+                    height: 60px;
+                    border: 1px solid #b9b9b9;
+                    text-indent: 15px;
                 }
             }
-            > .right {
-                float: right;
-            }
+        }
+        > .right {
+            float: right;
         }
     }
 }
 
-
-// Sign in button
 #signIn_cont {
     position: relative;
     display: block;
-    top: 27px; // ################################################################################ SET THIS IN JAVASCRIPT
     width: 330px !important;
     height: 225px !important;
     margin: 0 auto;
@@ -133,11 +135,11 @@
         width: 330px;
         height: 95px;
         margin: auto 0;
-        background-color: #d9d9d9;
         font: italic 900 32px $font;
         text-transform: uppercase;
         color: $darkGrey;
         cursor: pointer;
+        background-color: rgba(217,217,217, 1);
         z-index: 999;
     }
 
@@ -169,8 +171,8 @@
         shape-outside: circle(50%);
         border-radius: 50%;
         margin: 0 auto !important;
-        background-color: #e6e6e6;
-        border: 1px solid #d2d2d2;
+        background-color: rgba(217,217,217, 0.4);
+        border: 1px solid rgba(167,167,167,0.4);
 
         > input {
             display: block;
@@ -194,34 +196,98 @@
     left: -2px;
     width: 101%;
     height: 101%;
+    opacity: 0.9;
 }
 
 #main {
     position: relative;
     width: 100%;
     height: 680px;
+}
 
-    > .side {
-        position: relative;
-        float: left;
-        width: 15%;
+#video {
+    position: relative;
+    float: left;
+    width: 60%;
+    height: 100%;
+
+    > iframe {
+        width: 100%;
         height: 100%;
+        border: 0;
     }
+}
 
-    > #video {
+.side {
+    position: relative;
+    width: 20%;
+    height: auto;
+    float: left;
+
+    > img {
+        position: relative;
+        width: 50%;
+        max-width: 155px;
+        height: auto;
+    }
+    > h1, > h2, > h3, > .roles > span {
+        display: block;
+        position: relative;
+        width: 100%;
+        text-align: center;
+        text-transform: uppercase;
+    }
+        > h1 {
+            font: italic 900 60px $font;
+            color: white;
+            margin-bottom: 10px;
+        }
+        > h2 {
+            font: 900 46px $font;
+            margin: 0 auto;
+            color: #4c4c4c;
+
+            > img { position: relative; height: 24px; }
+        }
+}
+
+.team {
+    position: relative;
+    width: 100%;
+    height: auto;
+    font: italic 900 $font;
+
+    > div {
         position: relative;
         float: left;
-        width: 70%;
-        height: 100%;
+        width: 50%;
+        text-indent: 10px;
+        padding-top: 10%;
 
-        > iframe {
+        > span {
+            display: block;
+            float: left;
+            clear: both;
+            font: italic 900 24px $font;
+            text-transform: uppercase;
             width: 100%;
-            height: 100%;
-            border: 0;
         }
+    }
+    .names > span {
+        color: white;
+        text-align: right !important;
+    }
+    .roles > span{
+        color: #4c4c4c;
+        text-align: left;
     }
 }
 
 @media screen and (max-width: 1600px) {
 
+}
+
+@media screen and (max-width: 1520px) {
+    .side { float: right; width: 50%; padding: 5% 0; }
+    #video { width: 100%; }
 }
