--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -12,14 +12,6 @@ html, body {
   background-color: #323232;
   overflow-x: hidden; }
 
-.noselect {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
 textarea, input, button {
   outline: none;
   border: none; }
@@ -37,9 +29,6 @@ a {
 
 ul {
   list-style-type: none; }
-
-b {
-  font-weight: 300; }
 
 img {
   border: 0; }
@@ -61,6 +50,9 @@ img {
 .red {
   color: #963434; }
 
+.white {
+  color: white; }
+
 #header {
   position: relative;
   top: 0;
@@ -73,80 +65,85 @@ img {
     position: relative;
     width: 50%;
     height: 100%; }
-  #header > #sub {
-    background-color: #f16651;
-    float: left; }
-    #header > #sub > h1 {
-      margin-bottom: 0;
-      margin-left: 65px;
-      font: italic 900 50px Lato, Arial, sans-serif;
-      color: white;
-      text-transform: uppercase; }
-    #header > #sub > h2 {
-      margin-left: 65px;
-      max-width: 60%;
-      font: 300 16px Lato, Arial, sans-serif;
+
+#sub {
+  background: #f16651 url("/Images/sub_bg.png") no-repeat left center;
+  float: left; }
+  #sub > h1 {
+    margin-bottom: 0;
+    margin-left: 65px;
+    font: italic 900 50px Lato, Arial, sans-serif;
+    color: white;
+    text-transform: uppercase; }
+  #sub > h2 {
+    margin-left: 65px;
+    max-width: 60%;
+    font: 300 16px Lato, Arial, sans-serif;
+    color: white; }
+    #sub > h2 > a {
+      text-decoration: underline;
       color: white; }
-      #header > #sub > h2 > a {
-        text-decoration: underline;
-        color: white; }
-      #header > #sub > h2 > a:hover {
-        color: #eeeeee; }
-    #header > #sub > a {
-      display: block;
-      position: relative;
-      width: 290px;
-      height: auto;
-      background-color: #f67763;
-      color: #9a483b;
-      border: 1px solid #cf513f;
-      margin: 28px auto;
-      font: italic 900 30px Lato, Arial, sans-serif;
-      padding: 16px 0;
-      text-align: center;
-      text-transform: uppercase; }
-    #header > #sub > a:hover {
-      border-color: #9a483b;
-      -webkit-box-shadow: 1px 1px 14px -4px black;
-      -moz-box-shadow: 1px 1px 14px -4px black;
-      box-shadow: 1px 1px 14px -4px black; }
-  #header > #login {
-    background-color: #eeeeee;
-    float: right; }
-    #header > #login > form {
-      height: 100%;
-      width: 100%; }
-      #header > #login > form > div {
-        width: 50%;
-        height: 100%; }
-      #header > #login > form > .left {
-        float: left; }
-        #header > #login > form > .left > div {
-          position: relative;
-          margin: 0 106px 0 16%; }
-          #header > #login > form > .left > div > label {
-            display: block;
-            float: left;
-            clear: both;
-            font: italic 900 24px Lato, Arial, sans-serif;
-            margin: 24px 0 5px 0;
-            text-transform: uppercase;
-            color: #323232; }
-          #header > #login > form > .left > div > .type {
-            float: left;
-            clear: both;
-            font: 400 24px Lato, Arial, sans-serif;
-            width: 325px;
-            height: 60px;
-            border: 1px solid #b9b9b9;
-            text-indent: 15px; }
-      #header > #login > form > .right {
-        float: right; }
+    #sub > h2 > a:hover {
+      color: #eeeeee; }
+  #sub > a {
+    display: block;
+    position: relative;
+    width: 290px;
+    height: auto;
+    background-color: #f67763;
+    color: #9a483b;
+    border: 1px solid #cf513f;
+    margin: 28px auto;
+    font: italic 900 30px Lato, Arial, sans-serif;
+    padding: 16px 0;
+    text-align: center;
+    text-transform: uppercase; }
+  #sub > a:hover {
+    border-color: #9a483b;
+    -webkit-box-shadow: 1px 1px 14px -4px black;
+    -moz-box-shadow: 1px 1px 14px -4px black;
+    box-shadow: 1px 1px 14px -4px black; }
+  #sub > a:active {
+    -webkit-box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black;
+    -moz-box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black;
+    box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black; }
+
+#login {
+  background: #eeeeee url("/Images/login_bg.png") no-repeat right center;
+  float: right; }
+  #login > form {
+    height: 100%;
+    width: 100%; }
+    #login > form > div {
+      width: 50%;
+      height: 100%; }
+    #login > form > .left {
+      float: left; }
+      #login > form > .left > div {
+        position: relative;
+        margin: 0 106px 0 16%; }
+        #login > form > .left > div > label {
+          display: block;
+          float: left;
+          clear: both;
+          font: italic 900 24px Lato, Arial, sans-serif;
+          margin: 24px 0 5px 0;
+          text-transform: uppercase;
+          color: #323232; }
+        #login > form > .left > div > .type {
+          float: left;
+          clear: both;
+          font: 400 24px Lato, Arial, sans-serif;
+          width: 325px;
+          height: 60px;
+          border: 1px solid #b9b9b9;
+          text-indent: 15px; }
+    #login > form > .right {
+      float: right; }
 
 #signIn_cont {
   position: relative;
   display: block;
-  top: 27px;
   width: 330px !important;
   height: 225px !important;
   margin: 0 auto; }
@@ -159,11 +156,11 @@ img {
   width: 330px;
   height: 95px;
   margin: auto 0;
-  background-color: #d9d9d9;
   font: italic 900 32px Lato, Arial, sans-serif;
   text-transform: uppercase;
   color: #323232;
   cursor: pointer;
+  background-color: #d9d9d9;
   z-index: 999; }
 
 #signIn_border {
@@ -208,8 +205,8 @@ img {
   shape-outside: circle(50%);
   border-radius: 50%;
   margin: 0 auto !important;
-  background-color: #e6e6e6;
-  border: 1px solid #d2d2d2; }
+  background-color: rgba(217, 217, 217, 0.4);
+  border: 1px solid rgba(167, 167, 167, 0.4); }
   #signIn_circle > input {
     display: block;
     position: relative;
@@ -229,24 +226,82 @@ img {
   top: -2px;
   left: -2px;
   width: 101%;
-  height: 101%; }
+  height: 101%;
+  opacity: 0.9; }
 
 #main {
   position: relative;
   width: 100%;
   height: 680px; }
-  #main > .side {
+
+#video {
+  position: relative;
+  float: left;
+  width: 60%;
+  height: 100%; }
+  #video > iframe {
+    width: 100%;
+    height: 100%;
+    border: 0; }
+
+.side {
+  position: relative;
+  width: 20%;
+  height: auto;
+  float: left; }
+  .side > img {
+    position: relative;
+    width: 50%;
+    max-width: 155px;
+    height: auto; }
+  .side > h1, .side > h2, .side > h3, .side > .roles > span {
+    display: block;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase; }
+  .side > h1 {
+    font: italic 900 60px Lato, Arial, sans-serif;
+    color: white;
+    margin-bottom: 10px; }
+  .side > h2 {
+    font: 900 46px Lato, Arial, sans-serif;
+    margin: 0 auto;
+    color: #4c4c4c; }
+    .side > h2 > img {
+      position: relative;
+      height: 24px; }
+
+.team {
+  position: relative;
+  width: 100%;
+  height: auto;
+  font: italic 900 Lato, Arial, sans-serif; }
+  .team > div {
     position: relative;
     float: left;
-    width: 15%;
-    height: 100%; }
-  #main > #video {
-    position: relative;
-    float: left;
-    width: 70%;
-    height: 100%; }
-    #main > #video > iframe {
-      width: 100%;
-      height: 100%;
-      border: 0; }
+    width: 50%;
+    text-indent: 10px;
+    padding-top: 10%; }
+    .team > div > span {
+      display: block;
+      float: left;
+      clear: both;
+      font: italic 900 24px Lato, Arial, sans-serif;
+      text-transform: uppercase;
+      width: 100%; }
+  .team .names > span {
+    color: white;
+    text-align: right !important; }
+  .team .roles > span {
+    color: #4c4c4c;
+    text-align: left; }
+
+@media screen and (max-width: 1520px) {
+  .side {
+    float: right;
+    width: 50%;
+    padding: 5% 0; }
+  #video {
+    width: 100%; } }
 
