--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -53,6 +53,9 @@ img {
 .white {
   color: white; }
 
+body {
+  overflow: hidden; }
+
 #header {
   position: relative;
   top: 0;
@@ -102,11 +105,8 @@ img {
     border-color: #9a483b;
     -webkit-box-shadow: 1px 1px 14px -4px black;
     -moz-box-shadow: 1px 1px 14px -4px black;
-    box-shadow: 1px 1px 14px -4px black; }
-  #sub > a:active {
-    -webkit-box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black;
-    -moz-box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black;
-    box-shadow: inset 0px 0px 8px 1px rgba(0, 0, 0, 0.67) black; }
+    box-shadow: 1px 1px 14px -4px black;
+    transition: 0.15s; }
 
 #login {
   background: #eeeeee url("/Images/login_bg.png") no-repeat right center;
@@ -144,8 +144,8 @@ img {
 #signIn_cont {
   position: relative;
   display: block;
-  width: 330px !important;
-  height: 225px !important;
+  width: 330px;
+  height: 225px;
   margin: 0 auto; }
   #signIn_cont > p {
     position: absolute; }
@@ -298,11 +298,54 @@ img {
     text-align: left; }
 
 @media screen and (max-width: 1600px) {
+  #header {
+    height: 210px; }
   #signIn_circle {
     display: none; }
-  #signIn_border:before, #signIn_border:after, #signIn_border > :last-child:before, #signIn_border > :last-child:after {
+  #login > form > .left {
+    width: 70%; }
+  #login > form > .right {
+    width: 30%; }
+  #username, #password {
+    position: relative;
+    float: left;
+    width: 45%;
+    height: 100%;
+    margin: 0 0 0 2.5% !important; }
+    #username > label, #username > input, #password > label, #password > input {
+      font-size: 22px !important;
+      width: 100% !important; }
+  #signIn_cont {
+    height: 64px !important;
+    width: 80%;
+    margin-left: 10%; }
+  #signIn_rect {
+    position: absolute;
+    top: 0;
+    height: 100%;
     width: 100%;
-    transition: width 1s; } }
+    font-size: 24px; }
+  #signIn_rect:hover {
+    -webkit-box-shadow: 1px 1px 14px -4px black;
+    -moz-box-shadow: 1px 1px 14px -4px black;
+    box-shadow: 1px 1px 14px -4px black;
+    transition: 0.15s; }
+  #signIn_border:before, #signIn_border:after, #signIn_border > :last-child:before, #signIn_border > :last-child:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%; }
+  #signIn_border {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: calc(100% + 1px);
+    height: calc(100% + 1px); }
+  #sub > h1 {
+    font-size: 46px; }
+  #sub > h2 {
+    display: none; } }
 
 @media screen and (max-width: 1520px) {
   .side {
