--- a/Gobot/Gobot/Content/Home.scss
+++ b/Gobot/Gobot/Content/Home.scss
@@ -1,5 +1,6 @@
 ﻿@import 'global';
 
+body { overflow: hidden; }
 #header {
     position: relative;
     top: 0;
@@ -63,10 +64,7 @@
     > a:hover {
         border-color: $aColor;
         @include box-shadow(1px 1px 14px -4px);
-    }
-
-    > a:active {
-        @include box-shadow(inset 0px 0px 8px 1px rgba(0,0,0,0.67));
+        transition: 0.15s;
     }
 }
 
@@ -120,8 +118,8 @@
 #signIn_cont {
     position: relative;
     display: block;
-    width: 330px !important;
-    height: 225px !important;
+    width: 330px;
+    height: 225px;
     margin: 0 auto;
 
     > p {
@@ -284,16 +282,58 @@
 }
 
 @media screen and (max-width: 1600px) {
+    #header { height: 210px; }
     #signIn_circle { display: none; }
+
+    #login > form {
+        > .left { width: 70%; }
+        > .right { width: 30%; }
+    }
+
+    #username, #password { 
+        position: relative;
+        float: left;
+        width: 45%;
+        height: 100%;
+        margin: 0 0 0 2.5% !important;
+
+        > label, > input { font-size: 22px !important; width: 100% !important; }
+    }
+
+    #signIn_cont {
+        height: 64px !important; 
+        width: 80%;
+        margin-left: 10%;
+    }
+        #signIn_rect { position: absolute; top: 0; height: 100%; width: 100%; font-size: 24px; }
+            #signIn_rect:hover {
+                @include box-shadow(1px 1px 14px -4px);
+                transition: 0.15s;
+            }
+        
     #signIn_border:before, #signIn_border:after, #signIn_border > :last-child:before, #signIn_border > :last-child:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
         width: 100%;
-        transition: width 1s;
+    }
+
+    #signIn_border { position: absolute; top: -1px; left: -1px; width: calc(100% + 1px); height: calc(100% + 1px); }
+
+    #sub {
+        > h1 { font-size: 46px; }
+        > h2 { display: none; }
     }
 }
 
 @media screen and (max-width: 1520px) {
     .side { float: right; width: 50%; padding: 5% 0; }
     #video { width: 100%; }
+}
+
+@media screen and (max-width: 1400px) {
+    // CHANGE HEADER AGAIN
 }
 
 @media screen and (max-width: 650px) {
